PR/41230: -current: sh(1) endlessly looping in interactive Fix proposed from Matthew Mondor